# vif_project

./: README.md  main.py  pyproject.toml
model/: model.py
preprocessing/: feature_extraction.py  preprocessing.py
tests/model/: test_model.py
tests/preprocessing/: test_feature_extraction.py  test_preprocessing.py
utils/: base.py  logger.py
